--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,6 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
 version: 1.0.0+1
 
 environment:
@@ -26,7 +25,7 @@ dependencies:
   json_annotation: ^4.9.0
   equatable: ^2.0.5
   flutter_bloc: ^8.1.5
-
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -34,14 +33,25 @@ dev_dependencies:
   build_runner: ^2.4.11
   freezed: ^2.5.2
 
-
-
   flutter_lints: ^3.0.0
   json_serializable: ^6.8.0
 
-
 flutter:
-
 
   uses-material-design: true
 
+  assets:
+    - assets/images/
+    - assets/fonts/
+
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
