--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.5
   cached_network_image: ^3.3.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
